# landbruget.dk

.github/: pull_request_template.md
.github/workflows/: arbejdstilsynet_inspections.yml  arbejdstilsynet_inspections_pipeline.yml  chr_pipeline.yml  deploy-edge-function.yml  dma_pipeline.yml  dmi_pipeline.yml  property_owners_sftp_transfer.yml  property_owners_sftp_transfer_pipeline.yml  svineflytning_pipeline.yml  unified_pipeline.yml
backend/: .gitignore  README.md
backend/api/supabase/migrations/: 20250523223537_add_complex_iterated_test_data.sql
backend/common/: storage_interface.py
backend/pipelines/arbejdstilsynet_inspections/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  test.csv
backend/pipelines/arbejdstilsynet_inspections/bronze/: export.py
backend/pipelines/arbejdstilsynet_inspections/silver/: transform.py
backend/pipelines/chr_pipeline/: pyproject.toml
backend/pipelines/dma_scraper/: .env.example  README.md  main.py  pyproject.toml
backend/pipelines/dma_scraper/bronze/: fetch_company_data.py  fetch_company_detail.py
backend/pipelines/dma_scraper/silver/: transformation.py
backend/pipelines/property_owners_sftp/: README.md  env.example  sftp-transfer-startup-with-processing.sh  sftp-transfer-startup.sh
backend/pipelines/unified_pipeline/: pyproject.toml
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/patches/: @vis.gl+react-maplibre+0.0.14.patch
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/components/: global-search.tsx
frontend/src/components/chart/: custom-legend.tsx  custom-tooltip.tsx
frontend/src/components/common/: field-error.tsx  json-render.tsx
frontend/src/components/company/: company-hero.tsx  company.tsx
frontend/src/components/layout/: container.tsx  sidenav.tsx
frontend/src/components/page-sections/: hero.tsx
frontend/src/components/pagebuilder/: pagebuilder.tsx
frontend/src/components/skeleton/: tractor-loader.tsx
frontend/src/components/table/: data-table-pagination.tsx  dynamic-table.tsx
frontend/src/components/ui/: button.tsx  input.tsx  table.tsx
frontend/src/lib/: env.ts  utils.ts
frontend/src/services/supabase/: company.ts  config.ts  types.ts
frontend/src/stores/: hashStore.ts
frontend/src/types/: react-maplibre.d.ts
(+48 files in other folders)
