[project]
name = "arbejdstilsynet-inspections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "asttokens==3.0.0",
    "backcall==0.2.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "decorator==5.2.1",
    "dotenv==0.9.9",
    "duckdb==1.2.2",
    "executing==2.2.0",
    "google-cloud-storage",
    "greenlet==3.2.2",
    "ibis==3.3.0",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.7",
    "numpy==2.2.5",
    "objgraph==3.6.2",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pefile==2023.2.7",
    "pickleshare==0.7.5",
    "playwright==1.52.0",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pyarrow>=20.0.0",
    "pyarrow-hotfix>=0.7",
    "pyee==13.0.0",
    "pygments==2.19.1",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2025.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pywin32-ctypes==0.2.3",
    "setuptools==80.3.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "wcwidth==0.2.13",
]

[tool.setuptools.packages.find]
where = [""] # Look in the current directory, an empty string means project root for setuptools
include = ["bronze*", "silver*"]
# exclude = ["tests*"] # Example: if you have a tests directory you want to exclude
