[project]
name = "arbejdstilsynet-inspections"
version = "0.1.0"
description = "Pipeline for Arbejdstilsynet inspections data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "python-dotenv",
    "pandas",
    "gcsfs",
    "google-cloud-storage",
    "pyarrow",
    "loguru",
    "playwright",
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "duckdb==1.2.2",  # Kept for now
    'ibis-framework[duckdb]>=10.5.0' # Aligned with CHR pipeline
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bronze*", "silver*"]
namespaces = false
